AI progress and editor fix